bk_ida/gccida/c2/print_value
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_value/src/sched-vis.c:1130:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_value/src/sched-vis.c:1247:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( unsigned __int8 *)v32] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_value/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_value/src/sched-vis.c:1274:15: error: use of undeclared identifier 'off_710215'
sprintf( v73, off_710215); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_value/src/sched-vis.c:1339:15: error: use of undeclared identifier 'off_71F3EB'
sprintf( v73, off_71F3EB, *( _DWORD *)&x[1]); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_value/src/sched-vis.c:1433:15: error: use of undeclared identifier 'off_710211'
sprintf( v73, off_710211, *( unsigned int *)( x->fld[0].rtwint + 8)); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_value/src/sched-vis.c:1462:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v48.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_value/src/obj/sched-vis.o] Error 1
